@@ -21,5 +21,17 @@ namespace AjLanguage.Tests
 
             object result = channel.Receive();
         }
+
+        [TestMethod]
+        public void CreateAndUseChannelTenTimes()
+        {
+            Channel channel = new Channel();
+
+            Thread thread = new Thread(new ThreadStart(delegate() { for (int k=1; k<=10; k++) channel.Send(k); }));
+            thread.Start();
+
+            for (int j=1; j<=10; j++)
+                Assert.AreEqual(j, channel.Receive());
+        }
     }
 }
