@@ -7,6 +7,8 @@ To do list
 
 + Support for !, ||, &&
 
+- Assignments += -= ....
+
 Evaluate function
 Execute subroutine
 
